Styling change to fix long word text overflow

--- a/src/containers/LMS/GoogleClassroom/ActivitySummary/SummaryOutcome/style.scss
+++ b/src/containers/LMS/GoogleClassroom/ActivitySummary/SummaryOutcome/style.scss
@@ -79,6 +79,7 @@
 
 .response-container {
     flex-grow: 1;
+    word-break: break-word;
 }
 
 .score-container {
